--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
      box-sizing: border-box;
      font-family: 'Times New Roman', Times, serif;
  }
-
+body{
+    background-color: #252525;
+}
  .header {
      display: flex;
      flex-wrap: wrap;
@@ -35,7 +37,7 @@
  form {
      display: inline-block;
  }
- ul li a,
+  ul li a,
  form {
      text-decoration: none;
      margin-right: 20px;
@@ -59,7 +61,6 @@
      color: white;
      font-size: 20px;
  }
-
  .image {
      position: relative;
  }
@@ -75,7 +76,7 @@
         font-size: 20px;
         border-radius: 4px;
         padding: 4px;
-       }
+    }
  .image-text h1 {
      font-size: 50px;
      text-align: justify;
@@ -90,16 +91,16 @@
      font-size: 20px;
  }
 
- .image-text a {
+.image-text a {
      text-decoration: none;
      color: white;
      background-color: crimson;
      padding: 5px 6px;
      border-radius: 6px;
      font-size: 20px;
- }
- .image-text .bookmark,
- .image-text .share {
+}
+.image-text .bookmark,
+.image-text .share {
         width: 35px;
         padding: 4px;
         margin-bottom: -10px;
@@ -138,19 +139,20 @@
     margin-left: 8px;
  }
  #concerts {
-     column-count: 4;
-     column-width: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
      background-color: #212121;
      padding-top:20px ;
  }
  .card {
-     width: 260px;
+     width: 250px;
      border: none;
      border-radius: 4px;
      background-color: #414040;
+     margin-bottom: 20px;
      margin-left: 30px;
-     margin-bottom: 30px;
-     
+     margin-right: 30px;
  }
 
  .card-image {
